--- a/presentation.tex
+++ b/presentation.tex
@@ -10,6 +10,16 @@
 \usetikzlibrary{calc, shapes, backgrounds, positioning, matrix, shapes.multipart}
 \usepackage{multimedia}
 
+\usepackage[beamer,customcolors]{hf-tikz}
+\tikzset{hl/.style={
+    set fill color=blue!10,
+    set border color=blue,
+    disable rounded corners=true,
+    above offset=0.25,
+    below offset=-0.1,
+  }
+}
+
 \usetheme[compress]{Berlin}
 
 \usepackage{pgfpages}
@@ -55,6 +65,7 @@
 				\item Dual-armed robot
 				\item Flexible
 				\item Fine motor skills
+					\note[item]{Montera endast mellan maskiner utan tray}
 			\end{itemize}
 		\end{column}
 		\begin{column}[C]{5cm} % alternative top-align that's better for graphics
@@ -181,7 +192,18 @@
 }
 
 \frame{
-	\frametitle{Case Study}
+	\frametitle{Entities}
+	\begin{itemize}
+		\item Machines
+		\item Tools
+		\item Tray
+		\item Fixture
+		\item Output
+	\end{itemize}
+}
+
+\frame{
+	\frametitle{Assembly}
 	\begin{figure}
 		\resizebox{\textwidth}{0.8\textheight}{
 			\begin{tikzpicture}[node distance=2cm]
@@ -198,15 +220,15 @@
 			
 			\node (8) [task, right of=7, xshift=3.5cm, yshift=1cm] {Turn top-button};
 			
-			\node (10) [task, below of=8] {Mount ring, hold};
-			\node (11) [task, below of=10] {Mount ring, mount};
+			\node (10) [task, below of=8] {Mount nut, hold};
+			\node (11) [task, below of=10] {Mount nut, mount};
 			
-			\node (9) [task, below of=11] {Take ring};
+			\node (9) [task, below of=11] {Take nut};
 			
-			\node (12) [task, left of=11, xshift=-4cm, yshift=1cm] {Fixate top-button-ring};
+			\node (12) [task, left of=11, xshift=-4cm, yshift=1cm] {Fixate top-button-nut};
 			
-			\node (13) [task, left of=12, xshift=-9.5cm] {Put top-button-ring in top tray};
-			\node (14) [task, below of=13] {Take top-button-ring from top tray};
+			\node (13) [task, left of=12, xshift=-9.5cm] {Put top-button-nut in top tray};
+			\node (14) [task, below of=13] {Take top-button-nut from top tray};
 			
 			\node (15) [task, below of=9, yshift=-1.5cm] {Take switch};
 			\node (16) [task, left of=15, xshift=-3cm] {Mount switch};
@@ -218,7 +240,7 @@
 			
 			\node (20) [task, left of=19, xshift=-5cm] {Put bottom-switch on table};
 			
-			\node (21) [task, above of=20] {Mount top-button-ring on bottom-switch};
+			\node (21) [task, above of=20] {Mount top-button-nut on bottom-switch};
 			
 			\draw [arrow] (1) -- (2);
 			\draw [arrow] (3) -- (4);
@@ -268,22 +290,42 @@
 
 
 	\begin{table}
+	\centering
 	\begin{adjustwidth}{-0.5cm}{}
-	\small
+	\footnotesize
 	\begin{tabular}{l|c|c|c|c|c|c|c|c|}
-	\cline{2-9}
-	                                    & \multicolumn{2}{c|}{Pred \& Temp} &\multicolumn{2}{c|}{Pred} & \multicolumn{2}{c|}{Temp} & \multicolumn{2}{c|}{None} \\ \cline{2-9}
-	                                   & 1.6 & 2.0.1                      & 1.6     & 2.0.1         & 1.6 & 2.0.1              & 1.6 & 2.0.1              \\ \hline
-	\multicolumn{1}{|l|}{G12/FD}       & -   & -                          & -       & -             & -   & -                  & -   &-                   \\
-	\multicolumn{1}{|l|}{JaCoP}        & 658 & -                          & 1011156 & -             & -   & -                  & -   & -                  \\
-	\multicolumn{1}{|l|}{Gecode}       & -   & 60                         & -       & 71761         & -   & 99                 & -   & 70925              \\
-	\multicolumn{1}{|l|}{or-tools}     & 271 & !                          & 380     & !             & 302 & !                  & 457 & !                  \\ 
-	\multicolumn{1}{|l|}{Opturion CPX} & -   & !                          & -       & !             & -   & !                  & -   & !                  \\
-	\multicolumn{1}{|l|}{Choco3}       & -   & -                          & -       & -             & -   & -                  & -   & -                  \\ \hline
+		\cline{2-9}
+			                               & \multicolumn{2}{c|}{Pred \& Temp} &\multicolumn{2}{c|}{Pred} & \multicolumn{2}{c|}{Temp} & \multicolumn{2}{c|}{None} \\ \cline{2-9}
+			                               & 1.6                                                           & 2.0.1                                                        & 1.6     & 2.0.1                                                                               & 1.6 & 2.0.1 & 1.6 & 2.0.1                                                                           \\ \hline
+		\multicolumn{1}{|l|}{G12/FD}       & -                                                             & \tikzmarkin<2>[hl, left offset=-0.5, right offset=0.65]{a} - & -       & - \tikzmarkend{a}                                                                   & -   & -     & -   & -                                                                               \\
+		\multicolumn{1}{|l|}{JaCoP}        & 658                                                           & \tikzmarkin<3>[hl, left offset=-0.5, right offset=0.65]{b} - & 1011156 & - \tikzmarkend{b}                                                                   & -   & -     & -   & -                                                                               \\
+		\multicolumn{1}{|l|}{Gecode}       & -                                                             & 60                                                           & -       & \tikzmarkin<4-5>[hl, left offset=-0.19, right offset=0.19]{c} 71761 \tikzmarkend{c} & -   & 99    & -   & \tikzmarkin<5>[hl, left offset=-0.19, right offset=0.19]{d}71186\tikzmarkend{d} \\
+		\multicolumn{1}{|l|}{or-tools}     & 271                                                           & !                                                            & 380     & !                                                                                   & 302 & !     & 457 & !                                                                               \\ 
+		\multicolumn{1}{|l|}{Opturion CPX} & -                                                             & !                                                            & -       & !                                                                                   & -   & !     & -   & !                                                                               \\
+		\multicolumn{1}{|l|}{Choco3}       & \tikzmarkin<6>[hl, left offset=-0.27, right offset=0.65]{e} - & -                                                            & -       & - \tikzmarkend{e}                                                                   & -   & -     & -   & -                                                                               \\ \hline
 	\end{tabular}
 	\end{adjustwidth}
 	\end{table}
 
+\note<2>{
+Hittar lösning, inte optimal
+}
+
+\note<3>{
+Hittar hittar alla lösningar, inklusive optimala
+}
+
+\note<4>{
+Hittar 3 lösningar, inklusive optimala
+}
+
+\note<5>{
+Hittar 1 lösning, den optimala, på ungefär samma tid som den tidigare
+}
+
+\note<6>{
+Hittar 2 lösningar direkt
+}
 
 }
 
