--- a/presentation.tex
+++ b/presentation.tex
@@ -12,8 +12,8 @@
 
 \usepackage[beamer,customcolors]{hf-tikz}
 \tikzset{hl/.style={
-    set fill color=blue!10,
-    set border color=blue,
+    set fill color=cyan!50,
+    set border color=cyan,
     disable rounded corners=true,
     above offset=0.25,
     below offset=-0.1,
@@ -24,7 +24,7 @@
 
 \usepackage{pgfpages}
 \setbeameroption{show notes}
-%\setbeameroption{show notes on second screen=right}
+\setbeameroption{show notes on second screen=right}
 
 \usebackgroundtemplate
 {%
@@ -188,7 +188,7 @@
 \section{Case Study}
 \frame{
 	\frametitle{Case Study}
-	\movie[poster]{}{assembly.mp4}
+	\movie[height = 0.6 \textwidth,width = 1.0 \textwidth]{}{assembly.mp4}
 }
 
 \frame{
@@ -204,6 +204,7 @@
 
 \frame{
 	\frametitle{Assembly}
+	\begin{adjustwidth}{-0.5cm}{}
 	\begin{figure}
 		\resizebox{\textwidth}{0.8\textheight}{
 			\begin{tikzpicture}[node distance=2cm]
@@ -234,9 +235,9 @@
 			\node (16) [task, left of=15, xshift=-3cm] {Mount switch};
 			
 			\node (17) [task, below of=15] {Take bottom};
-			\node (18) [task, below of=16] {Put button in fixture};
+			\node (18) [task, below of=16] {Put bottom in fixture};
 			
-			\node (19) [task, left of=16, xshift=-3.5cm] {Take button-switch};
+			\node (19) [task, left of=16, xshift=-3.5cm] {Take bottom-switch};
 			
 			\node (20) [task, left of=19, xshift=-5cm] {Put bottom-switch on table};
 			
@@ -267,16 +268,756 @@
 			\end{tikzpicture}
 		}
 	\end{figure}
+	\end{adjustwidth}
 }
 
 \section{Model}
+
+\subsection{Components}
+
+\subsection{Storage Mediums}
 \frame{
 	\frametitle{Model}
+	Storage mediums
+	\begin{itemize}
+		\item Tray - Top tray, Button tray, etc.
+		\item Fixture
+		\item Output
+	\end{itemize}
+}
+
+\frame{
+	\frametitle{Tray}
+	\begin{adjustwidth}{-0.5cm}{}
+	\begin{figure}
+		\resizebox{\textwidth}{0.8\textheight}{
+			\begin{tikzpicture}[node distance=2cm]
+			\node (1) [task, fill=cyan!50] {Take top};
+			\node (2) [task, right of=1, xshift=2.5cm] {Put top in fixture};
+			
+			\node (3) [task, below of=1, fill=red!50] {Take button};
+			\node (4) [task, below of=2] {Mount button on top};
+			
+			\node (5) [task, xshift=2.5cm, right of=4] {Angle top-button};
+			
+			\node (6) [task, right of=5, xshift=3cm, yshift=1cm] {Lift top-button, hold};
+			\node (7) [task, below of=6] {Lift top-button, support};
+			
+			\node (8) [task, right of=7, xshift=3.5cm, yshift=1cm] {Turn top-button};
+			
+			\node (10) [task, below of=8] {Mount nut, hold};
+			\node (11) [task, below of=10] {Mount nut, mount};
+			
+			\node (9) [task, below of=11, fill=green!50] {Take nut};
+			
+			\node (12) [task, left of=11, xshift=-4cm, yshift=1cm] {Fixate top-button-nut};
+			
+			\node (13) [task, left of=12, xshift=-9.5cm, fill=cyan!50] {Put top-button-nut in top tray};
+			\node (14) [task, below of=13, fill=cyan!50] {Take top-button-nut from top tray};
+			
+			\node (15) [task, below of=9, yshift=-1.5cm, fill=orange!50] {Take switch};
+			\node (16) [task, left of=15, xshift=-3cm] {Mount switch};
+			
+			\node (17) [task, below of=15, fill=yellow!50] {Take bottom};
+			\node (18) [task, below of=16] {Put bottom in fixture};
+			
+			\node (19) [task, left of=16, xshift=-3.5cm] {Take bottom-switch};
+			
+			\node (20) [task, left of=19, xshift=-5cm] {Put bottom-switch on table};
+			
+			\node (21) [task, above of=20] {Mount top-button-nut on bottom-switch};
+			
+			\draw [arrow] (1) -- (2);
+			\draw [arrow] (3) -- (4);
+			\draw [arrow] (2) -- (4);
+			\draw [arrow] (4) -- (5);
+			\draw [arrow] (5) -- (6);
+			\draw [arrow] (5) -- (7);
+			\draw [arrow] (7) -- (8);
+			\draw [arrow] (6) -- (8);
+			\draw [arrow] (8) -- (10);
+			\draw [arrow] (10) -- (12);
+			\draw [arrow] (9) -- (11);
+			\draw [arrow] (11) -- (12);
+			\draw [arrow] (12) -- (13);
+			\draw [arrow] (13) -- (14);
+			\draw [arrow] (15) -- (16);
+			\draw [arrow] (17) -- (18);
+			\draw [arrow] (18) -- (16);
+			\draw [arrow] (16) -- (19);
+			\draw [arrow] (19) -- (20);
+			\draw [arrow] (20) -- (21);
+			\draw [arrow] (14) -- (21);
+			
+			\end{tikzpicture}
+		}
+	\end{figure}
+	\end{adjustwidth}
+}
+
+\frame{
+	\frametitle{Fixture}
+	\begin{adjustwidth}{-0.5cm}{}
+	\begin{figure}
+		\resizebox{\textwidth}{0.8\textheight}{
+			\begin{tikzpicture}[node distance=2cm]
+			\node (1) [task] {Take top};
+			\node (2) [task, right of=1, xshift=2.5cm, fill=cyan!50] {Put top in fixture};
+			
+			\node (3) [task, below of=1] {Take button};
+			\node (4) [task, below of=2, fill=cyan!50] {Mount button on top};
+			
+			\node (5) [task, xshift=2.5cm, right of=4, fill=cyan!50] {Angle top-button};
+			
+			\node (6) [task, right of=5, xshift=3cm, yshift=1cm] {Lift top-button, hold};
+			\node (7) [task, below of=6] {Lift top-button, support};
+			
+			\node (8) [task, right of=7, xshift=3.5cm, yshift=1cm] {Turn top-button};
+			
+			\node (10) [task, below of=8] {Mount nut, hold};
+			\node (11) [task, below of=10] {Mount nut, mount};
+			
+			\node (9) [task, below of=11] {Take nut};
+			
+			\node (12) [task, left of=11, xshift=-4cm, yshift=1cm, fill=cyan!50] {Fixate top-button-nut};
+			
+			\node (13) [task, left of=12, xshift=-9.5cm] {Put top-button-nut in top tray};
+			\node (14) [task, below of=13] {Take top-button-nut from top tray};
+			
+			\node (15) [task, below of=9, yshift=-1.5cm] {Take switch};
+			\node (16) [task, left of=15, xshift=-3cm, fill=cyan!50] {Mount switch};
+			
+			\node (17) [task, below of=15] {Take bottom};
+			\node (18) [task, below of=16, fill=cyan!50] {Put bottom in fixture};
+			
+			\node (19) [task, left of=16, xshift=-3.5cm, fill=cyan!50] {Take bottom-switch};
+			
+			\node (20) [task, left of=19, xshift=-5cm] {Put bottom-switch on table};
+			
+			\node (21) [task, above of=20] {Mount top-button-nut on bottom-switch};
+			
+			\draw [arrow] (1) -- (2);
+			\draw [arrow] (3) -- (4);
+			\draw [arrow] (2) -- (4);
+			\draw [arrow] (4) -- (5);
+			\draw [arrow] (5) -- (6);
+			\draw [arrow] (5) -- (7);
+			\draw [arrow] (7) -- (8);
+			\draw [arrow] (6) -- (8);
+			\draw [arrow] (8) -- (10);
+			\draw [arrow] (10) -- (12);
+			\draw [arrow] (9) -- (11);
+			\draw [arrow] (11) -- (12);
+			\draw [arrow] (12) -- (13);
+			\draw [arrow] (13) -- (14);
+			\draw [arrow] (15) -- (16);
+			\draw [arrow] (17) -- (18);
+			\draw [arrow] (18) -- (16);
+			\draw [arrow] (16) -- (19);
+			\draw [arrow] (19) -- (20);
+			\draw [arrow] (20) -- (21);
+			\draw [arrow] (14) -- (21);
+			
+			\end{tikzpicture}
+		}
+	\end{figure}
+	\end{adjustwidth}
+}
+
+\frame{
+	\frametitle{Output}
+	\begin{adjustwidth}{-0.5cm}{}
+	\begin{figure}
+		\resizebox{\textwidth}{0.8\textheight}{
+			\begin{tikzpicture}[node distance=2cm]
+			\node (1) [task] {Take top};
+			\node (2) [task, right of=1, xshift=2.5cm] {Put top in fixture};
+			
+			\node (3) [task, below of=1] {Take button};
+			\node (4) [task, below of=2] {Mount button on top};
+			
+			\node (5) [task, xshift=2.5cm, right of=4] {Angle top-button};
+			
+			\node (6) [task, right of=5, xshift=3cm, yshift=1cm] {Lift top-button, hold};
+			\node (7) [task, below of=6] {Lift top-button, support};
+			
+			\node (8) [task, right of=7, xshift=3.5cm, yshift=1cm] {Turn top-button};
+			
+			\node (10) [task, below of=8] {Mount nut, hold};
+			\node (11) [task, below of=10] {Mount nut, mount};
+			
+			\node (9) [task, below of=11] {Take nut};
+			
+			\node (12) [task, left of=11, xshift=-4cm, yshift=1cm] {Fixate top-button-nut};
+			
+			\node (13) [task, left of=12, xshift=-9.5cm] {Put top-button-nut in top tray};
+			\node (14) [task, below of=13] {Take top-button-nut from top tray};
+			
+			\node (15) [task, below of=9, yshift=-1.5cm] {Take switch};
+			\node (16) [task, left of=15, xshift=-3cm] {Mount switch};
+			
+			\node (17) [task, below of=15] {Take bottom};
+			\node (18) [task, below of=16] {Put bottom in fixture};
+			
+			\node (19) [task, left of=16, xshift=-3.5cm] {Take bottom-switch};
+			
+			\node (20) [task, left of=19, xshift=-5cm, fill=cyan!50] {Put bottom-switch on table};
+			
+			\node (21) [task, above of=20, fill=cyan!50] {Mount top-button-nut on bottom-switch};
+			
+			\draw [arrow] (1) -- (2);
+			\draw [arrow] (3) -- (4);
+			\draw [arrow] (2) -- (4);
+			\draw [arrow] (4) -- (5);
+			\draw [arrow] (5) -- (6);
+			\draw [arrow] (5) -- (7);
+			\draw [arrow] (7) -- (8);
+			\draw [arrow] (6) -- (8);
+			\draw [arrow] (8) -- (10);
+			\draw [arrow] (10) -- (12);
+			\draw [arrow] (9) -- (11);
+			\draw [arrow] (11) -- (12);
+			\draw [arrow] (12) -- (13);
+			\draw [arrow] (13) -- (14);
+			\draw [arrow] (15) -- (16);
+			\draw [arrow] (17) -- (18);
+			\draw [arrow] (18) -- (16);
+			\draw [arrow] (16) -- (19);
+			\draw [arrow] (19) -- (20);
+			\draw [arrow] (20) -- (21);
+			\draw [arrow] (14) -- (21);
+			
+			\end{tikzpicture}
+		}
+	\end{figure}
+	\end{adjustwidth}
+}
+
+\subsection{Tools}
+\frame{
+	\frametitle{Tools}
+	\begin{adjustwidth}{-0.5cm}{}
+		\begin{figure}
+			\resizebox{\textwidth}{0.8\textheight}{
+				\begin{tikzpicture}[node distance=2cm]
+				\node (1) [task, fill=cyan!50] {Take top};
+				\node (2) [task, right of=1, xshift=2.5cm, fill=cyan!50] {Put top in fixture};
+				
+				\node (3) [task, below of=1, fill=cyan!50] {Take button};
+				\node (4) [task, below of=2, fill=cyan!50] {Mount button on top};
+				
+				\node (5) [task, xshift=2.5cm, right of=4, fill=cyan!50] {Angle top-button};
+				
+				\node (6) [task, right of=5, xshift=3cm, yshift=1cm, fill=cyan!50] {Lift top-button, hold};
+				\node (7) [task, below of=6] {Lift top-button, support};
+				
+				\node (8) [task, right of=7, xshift=3.5cm, yshift=1cm, fill=cyan!50] {Turn top-button};
+				
+				\node (10) [task, below of=8, fill=cyan!50] {Mount nut, hold};
+				\node (11) [task, below of=10, fill=cyan!50] {Mount nut, mount};
+				
+				\node (9) [task, below of=11, fill=cyan!50] {Take nut};
+				
+				\node (12) [task, left of=11, xshift=-4cm, yshift=1cm, fill=cyan!50] {Fixate top-button-nut};
+				
+				\node (13) [task, left of=12, xshift=-9.5cm, fill=cyan!50] {Put top-button-nut in top tray};
+				\node (14) [task, below of=13, fill=cyan!50] {Take top-button-nut from top tray};
+				
+				\node (15) [task, below of=9, yshift=-1.5cm, fill=green!50] {Take switch};
+				\node (16) [task, left of=15, xshift=-3cm, fill=green!50] {Mount switch};
+				
+				\node (17) [task, below of=15, fill=green!50] {Take bottom};
+				\node (18) [task, below of=16, fill=green!50] {Put bottom in fixture};
+				
+				\node (19) [task, left of=16, xshift=-3.5cm, fill=green!50] {Take bottom-switch};
+				
+				\node (20) [task, left of=19, xshift=-5cm, , fill=green!50] {Put bottom-switch on table};
+				
+				\node (21) [task, above of=20, fill=cyan!50] {Mount top-button-nut on bottom-switch};
+				
+				\draw [arrow] (1) -- (2);
+				\draw [arrow] (3) -- (4);
+				\draw [arrow] (2) -- (4);
+				\draw [arrow] (4) -- (5);
+				\draw [arrow] (5) -- (6);
+				\draw [arrow] (5) -- (7);
+				\draw [arrow] (7) -- (8);
+				\draw [arrow] (6) -- (8);
+				\draw [arrow] (8) -- (10);
+				\draw [arrow] (10) -- (12);
+				\draw [arrow] (9) -- (11);
+				\draw [arrow] (11) -- (12);
+				\draw [arrow] (12) -- (13);
+				\draw [arrow] (13) -- (14);
+				\draw [arrow] (15) -- (16);
+				\draw [arrow] (17) -- (18);
+				\draw [arrow] (18) -- (16);
+				\draw [arrow] (16) -- (19);
+				\draw [arrow] (19) -- (20);
+				\draw [arrow] (20) -- (21);
+				\draw [arrow] (14) -- (21);
+				
+				\end{tikzpicture}
+			}
+		\end{figure}
+		\end{adjustwidth}
+		\note{Notera att "Lift top-button" inte har tool specificerad}
+}
+
+\subsection{Labeling}
+\frame{
+	\frametitle{Model}
+	Label tasks
+	\begin{itemize}
+		\item Taking
+		\item Mounting
+		\item Putting
+		\item Moving
+	\end{itemize}
+}
+
+\frame{
+	\frametitle{Taking}
+	\begin{adjustwidth}{-0.5cm}{}
+	\begin{figure}
+		\resizebox{\textwidth}{0.8\textheight}{
+			\begin{tikzpicture}[node distance=2cm]
+			\node (1) [task, fill=cyan!50] {Take top};
+			\node (2) [task, right of=1, xshift=2.5cm] {Put top in fixture};
+			
+			\node (3) [task, below of=1, fill=cyan!50] {Take button};
+			\node (4) [task, below of=2] {Mount button on top};
+			
+			\node (5) [task, xshift=2.5cm, right of=4, fill=cyan!50] {Angle top-button};
+			
+			\node (6) [task, right of=5, xshift=3cm, yshift=1cm] {Lift top-button, hold};
+			\node (7) [task, below of=6] {Lift top-button, support};
+			
+			\node (8) [task, right of=7, xshift=3.5cm, yshift=1cm] {Turn top-button};
+			
+			\node (10) [task, below of=8] {Mount nut, hold};
+			\node (11) [task, below of=10] {Mount nut, mount};
+			
+			\node (9) [task, below of=11, fill=cyan!50] {Take nut};
+			
+			\node (12) [task, left of=11, xshift=-4cm, yshift=1cm] {Fixate top-button-nut};
+			
+			\node (13) [task, left of=12, xshift=-9.5cm] {Put top-button-nut in top tray};
+			\node (14) [task, below of=13, fill=cyan!50] {Take top-button-nut from top tray};
+			
+			\node (15) [task, below of=9, yshift=-1.5cm, fill=cyan!50] {Take switch};
+			\node (16) [task, left of=15, xshift=-3cm] {Mount switch};
+			
+			\node (17) [task, below of=15, fill=cyan!50] {Take bottom};
+			\node (18) [task, below of=16] {Put bottom in fixture};
+			
+			\node (19) [task, left of=16, xshift=-3.5cm, fill=cyan!50] {Take bottom-switch};
+			
+			\node (20) [task, left of=19, xshift=-5cm] {Put bottom-switch on table};
+			
+			\node (21) [task, above of=20] {Mount top-button-nut on bottom-switch};
+			
+			\draw [arrow] (1) -- (2);
+			\draw [arrow] (3) -- (4);
+			\draw [arrow] (2) -- (4);
+			\draw [arrow] (4) -- (5);
+			\draw [arrow] (5) -- (6);
+			\draw [arrow] (5) -- (7);
+			\draw [arrow] (7) -- (8);
+			\draw [arrow] (6) -- (8);
+			\draw [arrow] (8) -- (10);
+			\draw [arrow] (10) -- (12);
+			\draw [arrow] (9) -- (11);
+			\draw [arrow] (11) -- (12);
+			\draw [arrow] (12) -- (13);
+			\draw [arrow] (13) -- (14);
+			\draw [arrow] (15) -- (16);
+			\draw [arrow] (17) -- (18);
+			\draw [arrow] (18) -- (16);
+			\draw [arrow] (16) -- (19);
+			\draw [arrow] (19) -- (20);
+			\draw [arrow] (20) -- (21);
+			\draw [arrow] (14) -- (21);
+			
+			\end{tikzpicture}
+		}
+	\end{figure}
+	\end{adjustwidth}
+	\note{Angle skulle kunna delas in i två tasks, en taking och en moving}
+}
+
+\frame{
+	\frametitle{Mounting}
+	\begin{adjustwidth}{-0.5cm}{}
+	\begin{figure}
+		\resizebox{\textwidth}{0.8\textheight}{
+			\begin{tikzpicture}[node distance=2cm]
+			\node (1) [task] {Take top};
+			\node (2) [task, right of=1, xshift=2.5cm] {Put top in fixture};
+			
+			\node (3) [task, below of=1] {Take button};
+			\node (4) [task, below of=2, fill=cyan!50] {Mount button on top};
+			
+			\node (5) [task, xshift=2.5cm, right of=4] {Angle top-button};
+			
+			\node (6) [task, right of=5, xshift=3cm, yshift=1cm] {Lift top-button, hold};
+			\node (7) [task, below of=6] {Lift top-button, support};
+			
+			\node (8) [task, right of=7, xshift=3.5cm, yshift=1cm] {Turn top-button};
+			
+			\node (10) [task, below of=8, fill=cyan!50] {Mount nut, hold};
+			\node (11) [task, below of=10, fill=cyan!50] {Mount nut, mount};
+			
+			\node (9) [task, below of=11] {Take nut};
+			
+			\node (12) [task, left of=11, xshift=-4cm, yshift=1cm] {Fixate top-button-nut};
+			
+			\node (13) [task, left of=12, xshift=-9.5cm] {Put top-button-nut in top tray};
+			\node (14) [task, below of=13] {Take top-button-nut from top tray};
+			
+			\node (15) [task, below of=9, yshift=-1.5cm] {Take switch};
+			\node (16) [task, left of=15, xshift=-3cm, fill=cyan!50] {Mount switch};
+			
+			\node (17) [task, below of=15] {Take bottom};
+			\node (18) [task, below of=16] {Put bottom in fixture};
+			
+			\node (19) [task, left of=16, xshift=-3.5cm] {Take bottom-switch};
+			
+			\node (20) [task, left of=19, xshift=-5cm] {Put bottom-switch on table};
+			
+			\node (21) [task, above of=20, fill=cyan!50] {Mount top-button-nut on bottom-switch};
+			
+			\draw [arrow] (1) -- (2);
+			\draw [arrow] (3) -- (4);
+			\draw [arrow] (2) -- (4);
+			\draw [arrow] (4) -- (5);
+			\draw [arrow] (5) -- (6);
+			\draw [arrow] (5) -- (7);
+			\draw [arrow] (7) -- (8);
+			\draw [arrow] (6) -- (8);
+			\draw [arrow] (8) -- (10);
+			\draw [arrow] (10) -- (12);
+			\draw [arrow] (9) -- (11);
+			\draw [arrow] (11) -- (12);
+			\draw [arrow] (12) -- (13);
+			\draw [arrow] (13) -- (14);
+			\draw [arrow] (15) -- (16);
+			\draw [arrow] (17) -- (18);
+			\draw [arrow] (18) -- (16);
+			\draw [arrow] (16) -- (19);
+			\draw [arrow] (19) -- (20);
+			\draw [arrow] (20) -- (21);
+			\draw [arrow] (14) -- (21);
+			
+			\end{tikzpicture}
+		}
+	\end{figure}
+	\end{adjustwidth}
+}
+
+\frame{
+	\frametitle{Putting}
+	\begin{adjustwidth}{-0.5cm}{}
+	\begin{figure}
+		\resizebox{\textwidth}{0.8\textheight}{
+			\begin{tikzpicture}[node distance=2cm]
+			\node (1) [task] {Take top};
+			\node (2) [task, right of=1, xshift=2.5cm, fill=cyan!50] {Put top in fixture};
+			
+			\node (3) [task, below of=1] {Take button};
+			\node (4) [task, below of=2] {Mount button on top};
+			
+			\node (5) [task, xshift=2.5cm, right of=4] {Angle top-button};
+			
+			\node (6) [task, right of=5, xshift=3cm, yshift=1cm] {Lift top-button, hold};
+			\node (7) [task, below of=6] {Lift top-button, support};
+			
+			\node (8) [task, right of=7, xshift=3.5cm, yshift=1cm] {Turn top-button};
+			
+			\node (10) [task, below of=8] {Mount nut, hold};
+			\node (11) [task, below of=10] {Mount nut, mount};
+			
+			\node (9) [task, below of=11] {Take nut};
+			
+			\node (12) [task, left of=11, xshift=-4cm, yshift=1cm] {Fixate top-button-nut};
+			
+			\node (13) [task, left of=12, xshift=-9.5cm, fill=cyan!50] {Put top-button-nut in top tray};
+			\node (14) [task, below of=13] {Take top-button-nut from top tray};
+			
+			\node (15) [task, below of=9, yshift=-1.5cm] {Take switch};
+			\node (16) [task, left of=15, xshift=-3cm] {Mount switch};
+			
+			\node (17) [task, below of=15] {Take bottom};
+			\node (18) [task, below of=16, fill=cyan!50] {Put bottom in fixture};
+			
+			\node (19) [task, left of=16, xshift=-3.5cm] {Take bottom-switch};
+			
+			\node (20) [task, left of=19, xshift=-5cm, fill=cyan!50] {Put bottom-switch on table};
+			
+			\node (21) [task, above of=20] {Mount top-button-nut on bottom-switch};
+			
+			\draw [arrow] (1) -- (2);
+			\draw [arrow] (3) -- (4);
+			\draw [arrow] (2) -- (4);
+			\draw [arrow] (4) -- (5);
+			\draw [arrow] (5) -- (6);
+			\draw [arrow] (5) -- (7);
+			\draw [arrow] (7) -- (8);
+			\draw [arrow] (6) -- (8);
+			\draw [arrow] (8) -- (10);
+			\draw [arrow] (10) -- (12);
+			\draw [arrow] (9) -- (11);
+			\draw [arrow] (11) -- (12);
+			\draw [arrow] (12) -- (13);
+			\draw [arrow] (13) -- (14);
+			\draw [arrow] (15) -- (16);
+			\draw [arrow] (17) -- (18);
+			\draw [arrow] (18) -- (16);
+			\draw [arrow] (16) -- (19);
+			\draw [arrow] (19) -- (20);
+			\draw [arrow] (20) -- (21);
+			\draw [arrow] (14) -- (21);
+			
+			\end{tikzpicture}
+		}
+	\end{figure}
+	\end{adjustwidth}
+}
+
+\frame{
+	\frametitle{Moving}
+	\begin{adjustwidth}{-0.5cm}{}
+	\begin{figure}
+		\resizebox{\textwidth}{0.8\textheight}{
+			\begin{tikzpicture}[node distance=2cm]
+			\node (1) [task] {Take top};
+			\node (2) [task, right of=1, xshift=2.5cm] {Put top in fixture};
+			
+			\node (3) [task, below of=1] {Take button};
+			\node (4) [task, below of=2] {Mount button on top};
+			
+			\node (5) [task, xshift=2.5cm, right of=4] {Angle top-button};
+			
+			\node (6) [task, right of=5, xshift=3cm, yshift=1cm, fill=cyan!50] {Lift top-button, hold};
+			\node (7) [task, below of=6, fill=cyan!50] {Lift top-button, support};
+			
+			\node (8) [task, right of=7, xshift=3.5cm, yshift=1cm, fill=cyan!50] {Turn top-button};
+			
+			\node (10) [task, below of=8] {Mount nut, hold};
+			\node (11) [task, below of=10] {Mount nut, mount};
+			
+			\node (9) [task, below of=11] {Take nut};
+			
+			\node (12) [task, left of=11, xshift=-4cm, yshift=1cm, fill=cyan!50] {Fixate top-button-nut};
+			
+			\node (13) [task, left of=12, xshift=-9.5cm] {Put top-button-nut in top tray};
+			\node (14) [task, below of=13] {Take top-button-nut from top tray};
+			
+			\node (15) [task, below of=9, yshift=-1.5cm] {Take switch};
+			\node (16) [task, left of=15, xshift=-3cm] {Mount switch};
+			
+			\node (17) [task, below of=15] {Take bottom};
+			\node (18) [task, below of=16] {Put bottom in fixture};
+			
+			\node (19) [task, left of=16, xshift=-3.5cm] {Take bottom-switch};
+			
+			\node (20) [task, left of=19, xshift=-5cm] {Put bottom-switch on table};
+			
+			\node (21) [task, above of=20] {Mount top-button-nut on bottom-switch};
+			
+			\draw [arrow] (1) -- (2);
+			\draw [arrow] (3) -- (4);
+			\draw [arrow] (2) -- (4);
+			\draw [arrow] (4) -- (5);
+			\draw [arrow] (5) -- (6);
+			\draw [arrow] (5) -- (7);
+			\draw [arrow] (7) -- (8);
+			\draw [arrow] (6) -- (8);
+			\draw [arrow] (8) -- (10);
+			\draw [arrow] (10) -- (12);
+			\draw [arrow] (9) -- (11);
+			\draw [arrow] (11) -- (12);
+			\draw [arrow] (12) -- (13);
+			\draw [arrow] (13) -- (14);
+			\draw [arrow] (15) -- (16);
+			\draw [arrow] (17) -- (18);
+			\draw [arrow] (18) -- (16);
+			\draw [arrow] (16) -- (19);
+			\draw [arrow] (19) -- (20);
+			\draw [arrow] (20) -- (21);
+			\draw [arrow] (14) -- (21);
+			
+			\end{tikzpicture}
+		}
+	\end{figure}
+	\end{adjustwidth}
+}
+
+\subsection{Grouping}
+
+\frame{
+	\frametitle{Model}
+	Group tasks
+	\begin{itemize}
+		\item Ordered group
+		\item Concurrent group
+	\end{itemize}
+}
+
+\frame{
+	\frametitle{Ordered group}
+	\begin{adjustwidth}{-0.5cm}{}
+		\begin{figure}
+			\resizebox{\textwidth}{0.8\textheight}{
+				\begin{tikzpicture}[node distance=2cm]
+				\node (1) [task] {Take top};
+				\node (2) [task, right of=1, xshift=2.5cm] {Put top in fixture};
+				
+				\node (3) [task, below of=1] {Take button};
+				\node (4) [task, below of=2] {Mount button on top};
+				
+				\node (5) [task, xshift=2.5cm, right of=4, fill=cyan!50] {Angle top-button};
+				
+				\node (6) [task, right of=5, xshift=3cm, yshift=1cm, fill=cyan!50] {Lift top-button, hold};
+				\node (7) [task, below of=6] {Lift top-button, support};
+				
+				\node (8) [task, right of=7, xshift=3.5cm, yshift=1cm, fill=cyan!50] {Turn top-button};
+				
+				\node (10) [task, below of=8, fill=cyan!50] {Mount nut, hold};
+				\node (11) [task, below of=10] {Mount nut, mount};
+				
+				\node (9) [task, below of=11] {Take nut};
+				
+				\node (12) [task, left of=11, xshift=-4cm, yshift=1cm, fill=cyan!50] {Fixate top-button-nut};
+				
+				\node (13) [task, left of=12, xshift=-9.5cm, fill=cyan!50] {Put top-button-nut in top tray};
+				\node (14) [task, below of=13] {Take top-button-nut from top tray};
+				
+				\node (15) [task, below of=9, yshift=-1.5cm] {Take switch};
+				\node (16) [task, left of=15, xshift=-3cm] {Mount switch};
+				
+				\node (17) [task, below of=15] {Take bottom};
+				\node (18) [task, below of=16] {Put bottom in fixture};
+				
+				\node (19) [task, left of=16, xshift=-3.5cm] {Take bottom-switch};
+				
+				\node (20) [task, left of=19, xshift=-5cm] {Put bottom-switch on table};
+				
+				\node (21) [task, above of=20] {Mount top-button-nut on bottom-switch};
+				
+				\draw [arrow] (1) -- (2);
+				\draw [arrow] (3) -- (4);
+				\draw [arrow] (2) -- (4);
+				\draw [arrow] (4) -- (5);
+				\draw [arrow] (5) -- (6);
+				\draw [arrow] (5) -- (7);
+				\draw [arrow] (7) -- (8);
+				\draw [arrow] (6) -- (8);
+				\draw [arrow] (8) -- (10);
+				\draw [arrow] (10) -- (12);
+				\draw [arrow] (9) -- (11);
+				\draw [arrow] (11) -- (12);
+				\draw [arrow] (12) -- (13);
+				\draw [arrow] (13) -- (14);
+				\draw [arrow] (15) -- (16);
+				\draw [arrow] (17) -- (18);
+				\draw [arrow] (18) -- (16);
+				\draw [arrow] (16) -- (19);
+				\draw [arrow] (19) -- (20);
+				\draw [arrow] (20) -- (21);
+				\draw [arrow] (14) -- (21);
+				
+				\end{tikzpicture}
+			}
+		\end{figure}
+		\end{adjustwidth}
+}
+
+\frame{
+	\frametitle{Concurrent group}
+	\frametitle{Ordered group}
+	\begin{adjustwidth}{-0.5cm}{}
+		\begin{figure}
+			\resizebox{\textwidth}{0.8\textheight}{
+				\begin{tikzpicture}[node distance=2cm]
+				\node (1) [task] {Take top};
+				\node (2) [task, right of=1, xshift=2.5cm] {Put top in fixture};
+				
+				\node (3) [task, below of=1] {Take button};
+				\node (4) [task, below of=2] {Mount button on top};
+				
+				\node (5) [task, xshift=2.5cm, right of=4] {Angle top-button};
+				
+				\node (6) [task, right of=5, xshift=3cm, yshift=1cm, fill=cyan!50] {Lift top-button, hold};
+				\node (7) [task, below of=6, fill=cyan!50] {Lift top-button, support};
+				
+				\node (8) [task, right of=7, xshift=3.5cm, yshift=1cm] {Turn top-button};
+				
+				\node (10) [task, below of=8, fill=green!50] {Mount nut, hold};
+				\node (11) [task, below of=10, fill=green!50] {Mount nut, mount};
+				
+				\node (9) [task, below of=11] {Take nut};
+				
+				\node (12) [task, left of=11, xshift=-4cm, yshift=1cm] {Fixate top-button-nut};
+				
+				\node (13) [task, left of=12, xshift=-9.5cm, fill=cyan!50] {Put top-button-nut in top tray};
+				\node (14) [task, below of=13] {Take top-button-nut from top tray};
+				
+				\node (15) [task, below of=9, yshift=-1.5cm] {Take switch};
+				\node (16) [task, left of=15, xshift=-3cm] {Mount switch};
+				
+				\node (17) [task, below of=15] {Take bottom};
+				\node (18) [task, below of=16] {Put bottom in fixture};
+				
+				\node (19) [task, left of=16, xshift=-3.5cm] {Take bottom-switch};
+				
+				\node (20) [task, left of=19, xshift=-5cm] {Put bottom-switch on table};
+				
+				\node (21) [task, above of=20] {Mount top-button-nut on bottom-switch};
+				
+				\draw [arrow] (1) -- (2);
+				\draw [arrow] (3) -- (4);
+				\draw [arrow] (2) -- (4);
+				\draw [arrow] (4) -- (5);
+				\draw [arrow] (5) -- (6);
+				\draw [arrow] (5) -- (7);
+				\draw [arrow] (7) -- (8);
+				\draw [arrow] (6) -- (8);
+				\draw [arrow] (8) -- (10);
+				\draw [arrow] (10) -- (12);
+				\draw [arrow] (9) -- (11);
+				\draw [arrow] (11) -- (12);
+				\draw [arrow] (12) -- (13);
+				\draw [arrow] (13) -- (14);
+				\draw [arrow] (15) -- (16);
+				\draw [arrow] (17) -- (18);
+				\draw [arrow] (18) -- (16);
+				\draw [arrow] (16) -- (19);
+				\draw [arrow] (19) -- (20);
+				\draw [arrow] (20) -- (21);
+				\draw [arrow] (14) -- (21);
+				
+				\end{tikzpicture}
+			}
+		\end{figure}
+		\end{adjustwidth}
 }
 
 \subsection{Filter}
 \frame{
 	\frametitle{Filter}
+	\begin{itemize}
+	\item Temporal filter
+	\item Predecessor filter
+	\end{itemize}
+}
+
+\frame{
+	\frametitle{Temporal Filter}
+}
+
+\frame{
+	\frametitle{Predecessor Filter}
 }
 
 \section{Evaluation}
@@ -285,8 +1026,27 @@
 }
 
 \subsection{Results}
+
 \frame{
-	\frametitle{Results}
+	\frametitle{Assembly Times}
+	\Huge
+	\begin{columns}[C] % contents are top vertically aligned
+			\begin{column}[C]{5cm} % each column can also be its own environment
+			\centering
+				Manual Time\\
+				516 t.u.
+			\end{column}
+			\pause
+			\begin{column}[C]{5cm} % alternative top-align that's better for graphics
+			\centering
+				Solver Time\\
+				512 t.u.			   
+			\end{column}
+		\end{columns}
+}
+
+\frame{
+	\frametitle{Solver Time}
 
 
 	\begin{table}
