--- a/presentation.tex
+++ b/presentation.tex
@@ -1368,4 +1368,16 @@ Hittar 2 lösningar direkt
 \end{figure}
 }
 
+\section{Conclusions}
+\frame{
+	\frametitle{Conclusions}
+	\begin{itemize}
+		\item<2-> Model produces solution just as good as handmade solution
+		\item<3-> Solver performance varies a lot
+		\item<4-> Best performance: Gecode, all filters, MiniZinc 2.0.1
+		\item<5-> Filters presented have a positive impact on runtime
+		\item<6-> No relation between FlatZinc output and solver runtime
+	\end{itemize}
+}
+
 \end{document}
